--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@supabase/supabase-js": "^2.39.3",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-lite-youtube-embed": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
